# ants_registration_ui

./: LICENSE  README.md  pyproject.toml
ants_registration/: __main__.py  main.py  registration.py  stack.py  ui.py  widgets.py
