[build-system]
requires      = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antsui"
version = "0.1.0"
description = "ANTs registration UI - graphical interface to the Advanced Normalization Toolbox"
readme = "README.md"
authors = [{ name = 'Tim Hladnik', email = "contact@vxpy.org" }]
license = { file = 'LICENSE' }
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering'
]
keywords = ['anatomy', 'imaging', 'neuroscience', 'anatomical registration', 'experiment']
dependencies = [
    'antspyx>=0.5.4',
    'numpy>=2.0.1',
    'PySide6>=6.8.0.2',
    'pyqtdarktheme>=2.1.0',
    'pyqtgraph>=0.13.7',
    'PyOpenGL>=3.1.7',
    'PyYAML>=6.0.2',
    'scipy>=1.14.1',
    'tifffile>=2024.9.20'
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ['.']
include = ['ants_registration*']

[project.optional-dependencies]
dev = ['pip-tools', 'pytest', 'build', 'twine']

[project.urls]
Homepage = 'https://github.com/thladnik/ants_registration_ui'

[project.scripts]
antsui = 'ants_registration.main:main'
