[build-system]
requires      = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antsui"
version = "0.1.0"
description = "ANTs registration UI - graphical interface to the Advanced Normalization Toolbox"
readme = "README.md"
authors = [{ name = 'Tim Hladnik', email = "contact@vxpy.org" }]
license = { file = 'LICENSE' }
classifiers = [
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Operating System :: POSIX :: Linux',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: Microsoft :: Windows :: Windows 11',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering'
]
keywords = ['anatomy', 'imaging', 'neuroscience', 'anatomical registration', 'experiment']
dependencies = [
    'antspyx',
    'numpy',
    'PySide6',
    'pyqtdarktheme',
    'pyqtgraph',
    'PyOpenGL',
    'PyYAML',
    'scipy',
    'tifffile'
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ['.']
include = ['ants_registration*']

[project.optional-dependencies]
dev = ['pip-tools', 'pytest', 'build', 'twine']

[project.urls]
Homepage = 'https://github.com/thladnik/ants_registration_ui'

[project.scripts]
antsui = 'ants_registration.main:main'
